feat(all): add redaction, reasons and mietunterlagen UI
